flask-minimal-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-minimal-app
spec:
  selector:
    matchLabels:
      app: flask-minimal-app
  template:
    metadata:
      labels:
        app: flask-minimal-app
    spec:
      containers:
      - name: flask-minimal-app
        image: andrebrisolla/flask-minimal-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
