flask-minimal-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: flask-minimal-app
  name: flask-minimal-app
  namespace: flask-minimal-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8085
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask-minimal-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
